--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <img
                 src="images/TaoLiu.jpg"
                 alt="profile photo"
-                style="width:100%; object-fit:cover; height:260px;"
+                style="width:100%; object-fit:cover; height:275px;"
                 class="hoverZoomLink"
               />
             </a>
@@ -132,15 +132,15 @@
         <table style="width:100%; border:0; border-spacing:0; margin:auto;">
           <tbody>
             <tr>
-              <td style="padding:20px; width:40%; vertical-align:middle;">
-                <div class="one">
+              <td style="padding:20px; width:40%; vertical-align:middle; padding-top: 0px;">
+                <div class="one", style="width:100%; height:100%">
                   <div class="two" id="GSEVT_video">
                     <video width="100%" muted autoplay loop>
-                      <source src="images/GSEVT.jpg" type="video/mp4" />
+                      <source src="images/GSEVT.png" type="video/mp4" />
                       Your browser does not support the video tag.
                     </video>
                   </div>
-                  <img src="images/GSEVT.jpg" id="GSEVT_image" width="100%" />
+                  <img src="images/GSEVT.png" id="GSEVT_image" width="90%" />
                 </div>
               </td>
               <td style="padding:20px; width:60%; vertical-align:middle;">
@@ -175,15 +175,15 @@
         <table style="width:100%; border:0; border-spacing:0; margin:auto;">
           <tbody>
             <tr>
-              <td style="padding:20px; width:40%; vertical-align:middle;">
-                <div class="one">
+              <td style="padding:20px; width:40%; vertical-align:middle; padding-top: 0px;">
+                <div class="one", style="width:100%; height:100%">
                   <div class="two" id="EVIT_video">
                     <video width="100%" muted autoplay loop>
-                      <source src="images/EVIT.jpg" type="video/mp4" />
+                      <source src="images/EVIT.png" type="video/mp4" />
                       Your browser does not support the video tag.
                     </video>
                   </div>
-                  <img src="images/EVIT.jpg" id="EVIT_image" width="100%" />
+                  <img src="images/EVIT.png" id="EVIT_image" width="90%" />
                 </div>
               </td>
               <td style="padding:20px; width:60%; vertical-align:middle;">
@@ -215,15 +215,15 @@
         <table style="width:100%; border:0; border-spacing:0; margin:auto;">
           <tbody>
             <tr>
-              <td style="padding:20px; width:40%; vertical-align:middle;">
-                <div class="one">
+              <td style="padding:20px; width:40%; vertical-align:middle; padding-top: 0px;">
+                <div class="one", style="width:100%; height:100%">
                   <div class="two" id="EventOCC_video">
                     <video width="100%" muted autoplay loop>
-                      <source src="images/EventOCC.jpg" type="video/mp4" />
+                      <source src="images/EventOCC.png" type="video/mp4" />
                       Your browser does not support the video tag.
                     </video>
                   </div>
-                  <img src="images/EventOCC.jpg" id="EventOCC_image" width="100%" />
+                  <img src="images/EventOCC.png" id="EventOCC_image" width="90%" />
                 </div>
               </td>
               <td style="padding:20px; width:60%; vertical-align:middle;">
