change profile photo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <td style="padding:2.5%; width:63%; vertical-align:middle;">
             <p class="name" style="text-align:center;">Tao Liu (刘滔)</p>
             <p style="text-align:justify;">
-              I am a PhD student under joint supervision between ShanghaiTech University and BIGAI,
+              I am a PhD student under joint supervision of ShanghaiTech University and BIGAI,
               advised by Prof.
               <a href="https://faculty.sist.shanghaitech.edu.cn/faculty/wangjingya/">Jingya Wang</a> and
               Research Scientist
@@ -35,9 +35,9 @@
               Previously, I obtained my Master degree from the Mobile Perception Lab (MPL) at ShanghaiTech University in 2025,
               supervised by Prof.
               <a href="https://mpl.sist.shanghaitech.edu.cn/Director.html">Laurent Kneip</a>.
-              There I worked on SLAM and 3DGS. Earlier, I earned my B.E. from Shanghai Maritime University in 2022,
+              There I worked on SLAM, 3DGS and Event Camera. Earlier, I earned my B.E. from Shanghai Maritime University in 2022,
               working closely with Prof.
-              <a href="https://ls.shmtu.edu.cn/2021/0105/c8183a72308/page.htm">Tianzheng Wang</a> in the Intelligent Car Lab.
+              <a href="https://ls.shmtu.edu.cn/2021/0105/c7568a136339/page.htm">Tianzheng Wang</a> in the Intelligent Car Lab.
             </p>
             <p style="text-align:center;">
               <a href="https://github.com/ChillTerry">Github</a> &nbsp;/&nbsp;
@@ -50,7 +50,13 @@
               <img
                 src="images/TaoLiu.jpg"
                 alt="profile photo"
-                style="width:100%; object-fit:cover; height:275px;"
+                style="
+                  width:250px;
+                  height:310px;
+                  object-fit:cover;
+                  display:block;
+                  margin:auto;
+                "
                 class="hoverZoomLink"
               />
             </a>
@@ -66,7 +72,7 @@
      * position, duration, location, description, and company website link.
      -->
     <section id="internship" style="border:0; margin-bottom: 30px;">
-      <h2>Internship</h2>
+      <h2>Internships</h2>
       <table style="width:100%; border:0; border-spacing:0; margin:auto;">
         <tbody>
           <!-- Internship 2: Horizon Robotics -->
@@ -83,7 +89,7 @@
             <td style="padding:20px; width:60%; vertical-align:middle;">
               <span class="papertitle">Horizon Robotics</span><br />
               <strong>Position:</strong> Perception Algorithm Intern<br />
-              <strong>Duration:</strong> December 2024 – February 2025<br />
+              <strong>Duration:</strong> December 2024 – March 2025<br />
               <p style="text-align:justify;">
                 I participated in the 3DGS+Calib project for an online calibration solution. 
                 By taking advantage of the rendering quality and speed of 3DGS to provide an accurate calibration for Cameras and LiDAR.
@@ -276,7 +282,7 @@
               <a href="https://www.bilibili.com/video/BV1RuaMeDE7r">Video</a>
               <p style="text-align:justify;">
                 As team leader, I guided two sophomore students in traditional control algorithms
-                and responsible for designing hardware PCBs (control, driver, detection boards) and developing AI algorithms.
+                and responsible for designing hardware PCBs and developing AI algorithms for trajectory tracking.
               </p>
             </td>
           </tr>
@@ -298,9 +304,9 @@
               <strong>Award:</strong> National 2nd Prize<br />
               <a href="https://www.bilibili.com/video/BV1if4y1P71P">Video</a>
               <p style="text-align:justify;">
-                As the youngest member of the team,
+                As team member,
                 I initially focused on map building task.
-                Later, I handled object detection using YOLOv5 and debugged the entire system within the ROS framework.
+                Later, I handled object detection using YOLOv5 and debugged the navigation system based on TEB algorithm.
               </p>
             </td>
           </tr>
